--- a/cert.html
+++ b/cert.html
@@ -76,17 +76,6 @@
                     <div class="row isotope-gutter">
                         <div class="col-xs-12 col-sm-6 col-md-4 udemy">
                             <figure class="works-item">
-                                <img src="img/cert/AprendePHP.png" alt="aprendePHP">
-                                <div class="overlay"></div>
-                                <figcaption class="works-inner">
-                                    <h4>Aprende PHP desde Cero</h4>
-                                    <a href="img/cert/AprendePHP.png" target="_blank"><i class="tf-ion-ios-search"></i>
-                                        Check it out</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4 udemy">
-                            <figure class="works-item">
                                 <img src="img/cert/Bootstrap5ySASS.png" alt="BootstrapySASS">
                                 <div class="overlay"></div>
                                 <figcaption class="works-inner">
@@ -98,6 +87,128 @@
                                 </figcaption>
                             </figure>
                         </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 other">
+                            <figure class="works-item">
+                                <img src="img/cert/ArtofNegotiation.png" alt="Artofnegotiation">
+                                <div class="overlay"></div>
+                                <figcaption class="works-inner">
+                                    <h4>Say less, get more</h4>
+                                    <a href="img/cert/ArtofNegotiation.png" target="_blank"><i
+                                            class="tf-ion-ios-search"></i> Check it out</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 microsoft">
+                            <figure class="works-item">
+                                <img src="img/cert/AzureAIEngineer.png" alt="AzureAICert">
+                                <div class="overlay"></div>
+                                <figcaption class="works-inner">
+                                    <h4>Azure AI Engineer <br> Certification</h4>
+                                    <a href="img/cert/AzureAIEngineer.png" target="_blank"><i
+                                            class="tf-ion-ios-search"></i> Check it out</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 other">
+                          <figure class="works-item">
+                              <img src="img/cert/OSHA30.png" alt="OSHA30">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>OSHA-30</h4>
+                                  <a href="img/cert/OSHA30.png" target="_blank"><i
+                                          class="tf-ion-ios-search"></i> Check it out</a>
+                              </figcaption>
+                          </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 codfas">
+                          <figure class="works-item">
+                              <img src="img/cert/BootcampAzureAI102.png" alt="BootcampAI102">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>Bootcamp AI 102</h4>
+                                  <a href="img/cert/BootcampAzureAI102.png" target="_blank"><i
+                                          class="tf-ion-ios-search"></i> Check it out</a>
+                              </figcaption>
+                          </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 other">
+                          <figure class="works-item">
+                              <img src="img/cert/Elephantintheroom.png" alt="Elephantintheroom">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>Addressing the Elephant</h4>
+                                  <a href="img/cert/Elephantintheroom.png" target="_blank"><i
+                                          class="tf-ion-ios-search"></i> Check it out</a>
+                              </figcaption>
+                          </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 other">
+                          <figure class="works-item">
+                              <img src="img/cert/EnhancingDigitalCustomerExperience.png" alt="Digitalexperience">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>Crafting Digital <br> Experinces</h4>
+                                  <a href="img/cert/EnhancingDigitalCustomerExperience.png" target="_blank"><i
+                                          class="tf-ion-ios-search"></i> Check it out</a>
+                              </figcaption>
+                          </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 microsoft">
+                          <figure class="works-item">
+                              <img src="img/cert/GitHubSkillsChallenge.png" alt="GitHubSkillsChallenge">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>GitHub Skills <br>Challenge</h4>
+                                  <a href="img/cert/GitHubSkillsChallenge.png" target="_blank"><i
+                                          class="tf-ion-ios-search"></i> Check it out</a>
+                              </figcaption>
+                          </figure>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6 col-md-4 other">
+                          <figure class="works-item">
+                              <img src="img/cert/Self-Awareness.png" alt="SelfAwareness">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>Self Awareness</h4>
+                                  <a href="img/cert/Self-Awareness.png" target="_blank"><i
+                                          class="tf-ion-ios-search"></i> Check it out</a>
+                              </figcaption>
+                          </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 microsoft">
+                          <figure class="works-item">
+                              <img src="img/cert/ServicesAzureAI.png" alt="ServiciosAzureAI">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>Servicios Azure AI</h4>
+                                  <a href="img/cert/ServicesAzureAI.png" target="_blank"><i
+                                          class="tf-ion-ios-search"></i> Check it out</a>
+                              </figcaption>
+                          </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 microsoft">
+                          <figure class="works-item">
+                              <img src="img/cert/solucionesconinteligenciadeAzureAI.png" alt="SolDocIA">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>Solución con Doc & IA</h4>
+                                  <a href="img/cert/solucionesconinteligenciadeAzureAI.png" target="_blank"><i
+                                          class="tf-ion-ios-search"></i> Check it out</a>
+                              </figcaption>
+                          </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 microsoft">
+                          <figure class="works-item">
+                              <img src="img/cert/solucionesnVisióndeAzureAI.png" alt="SolVisIA">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>Solución con Vision & IA</h4>
+                                  <a href="img/cert/solucionesnVisióndeAzureAI.png" target="_blank"><i
+                                          class="tf-ion-ios-search"></i> Check it out</a>
+                              </figcaption>
+                          </figure>
+                        </div>
                         <div class="col-xs-12 col-sm-6 col-md-4 microsoft">
                             <figure class="works-item">
                                 <img src="img/cert/ColaboracionconGit.png" alt="ColaboraConGit">
@@ -105,17 +216,6 @@
                                 <figcaption class="works-inner">
                                     <h4>Colaboración con Git</h4>
                                     <a href="img/cert/ColaboracionconGit.png" target="_blank"><i
-                                            class="tf-ion-ios-search"></i> Check it out</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4 other">
-                            <figure class="works-item">
-                                <img src="img/cert/ComoCreartuPropioPodcast.png" alt="CrearPodcast">
-                                <div class="overlay"></div>
-                                <figcaption class="works-inner">
-                                    <h4>Como Crear tu Propio Podcast</h4>
-                                    <a href="img/cert/ComoCreartuPropioPodcast.png" target="_blank"><i
                                             class="tf-ion-ios-search"></i> Check it out</a>
                                 </figcaption>
                             </figure>
@@ -157,31 +257,6 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4 udemy">
-                            <figure class="works-item">
-                                <img src="img/cert/EdicióndeVideoconAdobePremiere.png" alt="EdicionVideoPremiere">
-                                <div class="overlay"></div>
-                                <figcaption class="works-inner">
-                                    <h4>Curso de Edición de Video</h4>
-                                    <h4>con Adobe Premiere</h4>
-                                    <a href="img/cert/EdicióndeVideoconAdobePremiere.png" target="_blank"><i
-                                            class="tf-ion-ios-search"></i> Check it out</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4 udemy">
-                            <figure class="works-item">
-                                <img src="img/cert/Empezareneldesarrolloweb.png" alt="desarrollowebHTML">
-                                <div class="overlay"></div>
-                                <figcaption class="works-inner">
-                                    <h4>Por donde empezar en el</h4>
-                                    <h4>desarrollo web</h4>
-                                    <h4> Curso de HTML</h4>
-                                    <a href="img/cert/Empezareneldesarrolloweb.png" target="_blank"><i
-                                            class="tf-ion-ios-search"></i> Check it out</a>
-                                </figcaption>
-                            </figure>
-                        </div>
                         <div class="col-xs-12 col-sm-6 col-md-4 microsoft">
                             <figure class="works-item">
                                 <img src="img/cert/GitHubCodespaces.png" alt="GitHubCodespaces">
@@ -192,6 +267,17 @@
                                             class="tf-ion-ios-search"></i> Check it out</a>
                                 </figcaption>
                             </figure>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 udemy">
+                          <figure class="works-item">
+                              <img src="img/cert/AprendePHP.png" alt="aprendePHP">
+                              <div class="overlay"></div>
+                              <figcaption class="works-inner">
+                                  <h4>Aprende PHP desde Cero</h4>
+                                  <a href="img/cert/AprendePHP.png" target="_blank"><i class="tf-ion-ios-search"></i>
+                                      Check it out</a>
+                              </figcaption>
+                          </figure>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-4 microsoft">
                             <figure class="works-item">
@@ -222,28 +308,6 @@
                                 <figcaption class="works-inner">
                                     <h4>Introducción a GitHub Copilot</h4>
                                     <a href="img/cert/IntroduccionaGitHubCopilot.png" target="_blank"><i
-                                            class="tf-ion-ios-search"></i> Check it out</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4 other">
-                            <figure class="works-item">
-                                <img src="img/cert/Taller de Metodologias.png" alt="TallerMeto">
-                                <div class="overlay"></div>
-                                <figcaption class="works-inner">
-                                    <h4>Taller de Metodologías</h4>
-                                    <a href="img/cert/Taller de Metodologias.png" target="_blank"><i
-                                            class="tf-ion-ios-search"></i> Check it out</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4 udemy">
-                            <figure class="works-item">
-                                <img src="img/cert/PhotoshopforBeginners.png" alt="TallerMeto">
-                                <div class="overlay"></div>
-                                <figcaption class="works-inner">
-                                    <h4>Photoshop for Beginners</h4>
-                                    <a href="img/cert/PhotoshopforBeginners.png" target="_blank"><i
                                             class="tf-ion-ios-search"></i> Check it out</a>
                                 </figcaption>
                             </figure>
@@ -334,7 +398,7 @@
                 <span class="prev-page "><a href="portfolio.html" class="link flechas"><i
                             class="tf-ion-ios-arrow-left"></i> Prev Page</a></span>
                 <span class="copyright">
-                    <h4 class="maya nombrepie">David Adrián Ochoa &#174&#169 2024</h4>
+                    <h4 class="maya nombrepie">David Adrián Ochoa &#174&#169 2025</h4>
                 </span>
                 <span class="next-page"><a href="contact.html" class="link flechas">Next Page <i
                             class="tf-ion-ios-arrow-right"></i></a></span>
