--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
                                     </div>
                                     <div class='inner resumepersonal'>
                                         <h4 class="maya ">Age</h4>
-                                        <p>39 years old</p><br>
+                                        <p>40 years old</p><br>
                                     </div>
                                     <div class='inner resumepersonal'>
                                         <h4 class="maya ">Whereabout</h4>
@@ -86,77 +86,77 @@
                                     <h3>Hightlights</h3>
                                 </div>
                                 <div class="history-scroller">
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-tools"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>TOEFL Test IBT / PBT - 583</h5>
-                                            <span>2001</span>
-                                        </div>
+                                  <div class="history-item maya">
+                                    <div class="history-icon">
+                                      <span class="history-hex"></span>
+                                      <i class="tf-ion-bookmark"></i>
                                     </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-ion-bookmark"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>XI National Chemistry Olympiad <br> Honorific Mention</h5>
-                                            <span>2002</span>
-                                        </div>
+                                    <div class="history-text">
+                                      <h5>OSHA 30 Certification</h5>
+                                      <span>2024</span>
                                     </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-ion-bookmark"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>XII National Chemistry Olympiad <br> Honorific Mention</h5>
-                                            <span>2003</span>
-                                        </div>
+                                  </div>
+                                  <div class="history-item maya">
+                                    <div class="history-icon">
+                                      <span class="history-hex"></span>
+                                      <i class="tf-profile-male"></i>
                                     </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-ion-calculator"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>University - Mechatronics Engineer</h5>
-                                            <span>2003 - 2008</span>
-                                        </div>
+                                    <div class="history-text">
+                                      <h5>Volunteer ResilienteMX <br> Veracruz Coordinator</h5>
+                                      <span>2021-Present</span>
                                     </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-tools"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>TOEIC Test - 920</h5>
-                                            <span>2011</span>
-                                        </div>
+                                  </div>
+                                  <div class="history-item maya">
+                                    <div class="history-icon">
+                                      <span class="history-hex"></span>
+                                      <i class="tf-ion-bookmark"></i>
                                     </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-ion-bookmark"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>Six Sigma Certification</h5>
-                                            <span>2015 - 2016</span>
-                                        </div>
+                                    <div class="history-text">
+                                      <h5>Six Sigma Certification</h5>
+                                      <span>2015 - 2016</span>
                                     </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-profile-male"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>Volunteer ResilienteMX <br> Veracruz Coordinator</h5>
-                                            <span>2021-Present</span>
-                                        </div>
+                                  </div>
+                                  <div class="history-item maya">
+                                    <div class="history-icon">
+                                      <span class="history-hex"></span>
+                                      <i class="tf-tools"></i>
                                     </div>
+                                    <div class="history-text">
+                                      <h5>TOEIC Test - 920</h5>
+                                      <span>2011</span>
+                                    </div>
+                                  </div>
+                                  <div class="history-item maya">
+                                    <div class="history-icon">
+                                      <span class="history-hex"></span>
+                                      <i class="tf-ion-calculator"></i>
+                                    </div>
+                                    <div class="history-text">
+                                      <h5>University - Mechatronics Engineer</h5>
+                                      <span>2003 - 2008</span>
+                                    </div>
+                                  </div>
+                                  <div class="history-item maya">
+                                    <div class="history-icon">
+                                      <span class="history-hex"></span>
+                                      <i class="tf-ion-bookmark"></i>
+                                    </div>
+                                    <div class="history-text">
+                                      <h5>XI & XII National Chemistry Olympiad <br> Honorific Mention</h5>
+                                      <span>2003, 2002</span>
+                                    </div>
+                                  </div>
+                                  <div class="history-item maya">
+                                    <div class="history-icon">
+                                      <span class="history-hex"></span>
+                                      <i class="tf-tools"></i>
+                                    </div>
+                                    <div class="history-text">
+                                      <h5>TOEFL Test IBT / PBT - 583</h5>
+                                      <span>2001</span>
+                                  </div>
                                 </div>
+                              </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-6">
@@ -165,80 +165,80 @@
                                     <h3>Experience</h3>
                                 </div>
                                 <div class="history-scroller">
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-ion-laptop"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>XTAC Technical support engineer</h5>
-                                            <span>2021-2023</span>
-                                        </div>
+                                  <div class="history-item maya">
+                                    <div class="history-icon">
+                                        <span class="history-hex"></span>
+                                        <i class="tf-ion-laptop"></i>
                                     </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>Data Analyst</h5>
-                                            <span>2019-2021</span>
-                                        </div>
-                                    </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-profile-male"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>Branch Responsible</h5>
-                                            <span>2017-2019</span>
-                                        </div>
-                                    </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-tools-2"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>Senior design and programmer engineer</h5>
-                                            <span>2016-2017</span>
-                                        </div>
-                                    </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-ion-laptop"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>Telecom: Integration, Design & <br>Optimization Engineer</h5>
-                                            <span>2011-2016</span>
-                                        </div>
-                                    </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex"></span>
-                                            <i class="tf-tools"></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5>Electronic equipment designer</h5>
-                                            <span>2008-2009</span>
-                                        </div>
-                                    </div>
-                                    <div class="history-item maya">
-                                        <div class="history-icon">
-                                            <span class="history-hex2"></span>
-                                            <i class=""></i>
-                                        </div>
-                                        <div class="history-text">
-                                            <h5></h5>
-                                            <span></span>
-                                        </div>
+                                    <div class="history-text">
+                                        <h5>Remote Construction Manager</h5>
+                                        <span>2024-Present</span>
                                     </div>
                                 </div>
+                                <div class="history-item maya">
+                                  <div class="history-icon">
+                                    <span class="history-hex"></span>
+                                    <i class="tf-ion-laptop"></i>
+                                  </div>
+                                  <div class="history-text">
+                                    <h5>XTAC Technical support engineer</h5>
+                                    <span>2021-2023</span>
+                                  </div>
+                                </div>
+                                <div class="history-item maya">
+                                  <div class="history-icon">
+                                    <span class="history-hex"></span>
+                                    <i class="tf-documents5"></i>
+                                  </div>
+                                  <div class="history-text">
+                                    <h5>Data Analyst</h5>
+                                    <span>2019-2021</span>
+                                  </div>
+                                </div>
+                                <div class="history-item maya">
+                                  <div class="history-icon">
+                                    <span class="history-hex"></span>
+                                    <i class="tf-profile-male"></i>
+                                  </div>
+                                  <div class="history-text">
+                                    <h5>Branch Responsible</h5>
+                                    <span>2017-2019</span>
+                                  </div>
+                                </div>
+                                <div class="history-item maya">
+                                  <div class="history-icon">
+                                    <span class="history-hex"></span>
+                                    <i class="tf-tools-2"></i>
+                                  </div>
+                                  <div class="history-text">
+                                    <h5>Senior design and programmer engineer</h5>
+                                    <span>2016-2017</span>
+                                  </div>
+                                </div>
+                                <div class="history-item maya">
+                                  <div class="history-icon">
+                                    <span class="history-hex"></span>
+                                    <i class="tf-ion-laptop"></i>
+                                  </div>
+                                  <div class="history-text">
+                                    <h5>Telecom: Integration, Design & <br>Optimization Engineer</h5>
+                                    <span>2011-2016</span>
+                                  </div>
+                                </div>
+                                <div class="history-item maya">
+                                  <div class="history-icon">
+                                    <span class="history-hex"></span>
+                                    <i class="tf-tools"></i>
+                                  </div>
+                                  <div class="history-text">
+                                    <h5>Electronic equipment designer</h5>
+                                    <span>2008-2009</span>
+                                  </div>
+                                </div>
+                              </div>
                             </div>
-                        </div>
-                    </div><br>
+                          </div>
+                        </div><br>
                     <div class=' about-info col-12 centrostext'>
                         <p class="text-center centrostext">
                             <a class='symp-btn' href='https://www.linkedin.com/in/davidadrian8a/' target="_blank"><i
@@ -268,7 +268,7 @@
                 <span class="prev-page "><a href="services.html" class="link flechas"><i
                             class="tf-ion-ios-arrow-left"></i> Prev Page</a></span>
                 <span class="copyright">
-                    <h4 class="maya nombrepie">David Adrián Ochoa &#174&#169 2024</h4>
+                    <h4 class="maya nombrepie">David Adrián Ochoa &#174&#169 2025</h4>
                 </span>
                 <span class="next-page"><a href="portfolio.html" class="link flechas">Next Page <i
                             class="tf-ion-ios-arrow-right"></i></a></span>
